Refactor Customer service.

--- a/Services/Customer/Customer.Web/Views/Home/Index.cshtml
+++ b/Services/Customer/Customer.Web/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Customer.Domain.Models;
-@model List<CustomerViewModel>
+﻿@model List<Customer.Domain.Entities.Customer>
 @{
     ViewData["Title"] = "Home Page";
 }
